<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.AccesoActivity"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/form_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="5"
                android:orientation="vertical"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@mipmap/logo_ciatec_backwhite2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/acceso_form"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="500dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/ic_acceso" />

                        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                            android:id="@+id/spn_acceso"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/form_margin_left"
                            android:hint="@string/prompt_acceso"
                            android:textColorHint="@color/colorAccent"
                            android:textColor="@color/colorSecondaryText"
                            app:met_floatingLabel="normal" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="500dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/ic_candado" />

                        <EditText
                            android:id="@+id/etx_claveAcceso"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/form_margin_left"
                            android:hint="@string/prompt_clave"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="numberPassword"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </LinearLayout>
                    <Button
                        android:id="@+id/btn_Ingresar"
                        style="?android:textAppearanceSmall"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:background="@color/colorSecondaryText"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/colorPrimaryDark" />
                    <Button
                        android:id="@+id/btn_agregarAcceso"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="10dp"
                        android:background="@null"
                        android:text="@string/agregar_acceso"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@mipmap/logo_conacyt" />
                </LinearLayout>

            </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>