<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.SeleccionRegistroActivity"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/form_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                android:paddingBottom="@dimen/form_padding_bottom">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/form_margin"
                    android:src="@mipmap/logo_ciatec_backwhite"/>


                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginVertical="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/opcionaregistrar"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="30dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="100dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_Entrada"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:text="@string/content_entrada"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="40dp" />

                        <Button
                            android:id="@+id/btn_Salida"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:text="@string/content_salida"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="40dp" />
                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/logo_conacyt" />

                <ProgressBar
                    android:id="@+id/login_progress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:visibility="gone" />

            </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>