<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentos.SalidaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/form_padding"
        android:background="@color/colorSecondaryText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:weightSum="7">

            <LinearLayout
                android:id="@+id/lnl_busqueda"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginHorizontal="30dp"
                android:paddingHorizontal="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">
                    <TextView
                        android:id="@+id/txv_FechaEntrada"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="20dp" />
                    <!-- The desired time zone's ID null
                    to user the time zone specified by the user -->
                    <TextClock
                        android:id="@+id/txc_HoraEntrada"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:textSize="20dp" />
                    <TextView
                        android:id="@+id/txv_hrs"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:text="hrs"
                        android:textSize="20dp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/ic_find01" />

                    <EditText
                        android:id="@+id/edt_busqueda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/form_margin_left"
                        android:hint="@string/prompt_busqueda"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"
                        android:singleLine="true" />
                </LinearLayout>

            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_marginHorizontal="40dp">

            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginHorizontal="40dp"
                android:layout_gravity="center"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_RegistrarSalida"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/content_regsalida"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="15dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>